1.Styling the video player section
2.Adding like and dislike buttons

3.Styling the recommended videos sidebar

--- a/index.html
+++ b/index.html
@@ -22,14 +22,12 @@
           ><img src="./images/video-add.png" alt="a Video add icon"
         /></a>
         <a href="#"><img src="./images/Apps.png" alt="an app panel icon" /></a>
-        <a href="#"
-          ><img
-            src="./images/notification-bell.png"
+        <a href="#"><img src="./images/notification-bell.png"
             alt="a notification bell icon"
         /></a>
       </div>
     </nav>
-    <section>
+    <section class="video-player">
       <div class="embed-video">
         <iframe
           width="560"
@@ -43,12 +41,18 @@
       <div class="desc-video">
         <h3>Embed videos and playlists</h3>
         <p>218,047 views•May 13, 2016</p>
+        <img class="like" src="./images/dislike-solid-removebg-preview.png" alt="dislike">
+        <img class="dislike" src="./images/like-solid-removebg-preview.png" alt="like">
+        <button>Share</button>
       </div>
+      <hr>
       <div class="channel">
         <img src="./images/youtube-little-icon.jpg" alt="youtube little icon" />
-        <h5>TeamYouTube [Help]</h5>
-        <p>7.89M subscribers</p>
+          <h5>TeamYouTube [Help]</h5>
+          <p>7.89M subscribers</p>
         <button class="sub-btn">SUBSCRIBE</button>
+      </div>
+      <div class="channel2">
         <p>
           To learn more please visit the YouTube Help Center:
           https://www.youtube.com/help
@@ -56,30 +60,30 @@
         <button>SHOW MORE</button>
       </div>
     </section>
-    <aside>
+    <aside class="sidebar">
       <div>
         <img src="./images/video1.png" alt="Music Vidoe 1" />
-        <h5>Music Vidoe 1</h5>
+        <h5>Music Video 1</h5>
         <p>300 views</p>
       </div>
       <div>
         <img src="./images/video2.jfif" alt="Music Vidoe 2" />
-        <h5>Music Vidoe 2</h5>
+        <h5>Music Video 2</h5>
         <p>450 views</p>
       </div>
       <div>
         <img src="./images/vidoe3.png" alt="Music Vidoe 3" />
-        <h5>Music Vidoe 3</h5>
+        <h5>Music Video 3</h5>
         <p>120 views</p>
       </div>
       <div>
         <img src="./images/video4.jfif" alt="Music Vidoe 4" />
-        <h5>Music Vidoe 4</h5>
+        <h5>Music Video 4</h5>
         <p>300 views</p>
       </div>
       <div>
         <img src="./images/video5.jfif" alt="Music Vidoe 5" />
-        <h5>Music Vidoe 5</h5>
+        <h5>Music Video 5</h5>
         <p>410 views</p>
       </div>
     </aside>
