Embed three images representing logos

--- a/index.html
+++ b/index.html
@@ -11,13 +11,16 @@
 <body>
     <nav>
         <div class="navbar-logo">
-            <img src="./images/1280px-YouTube_Logo.svg.png">
+            <img src="./images/YouTube_Logo.png" alt="YouTube logo image">
         </div>
         <div class="navbar-search">
             <input type="text" name="search" placeholder="Search">
-            <a href="#" class="search-btn">
-                <i class="fas fa-search"></i>
-            </a>
+            <button class="search-btn"><i class="fas fa-search"></button>
+        </div>
+        <div class="avatar-images">
+            <img src="./images/video-add.png" alt="a Video add icon">
+            <img src="./images/Apps.png" alt="an app panel icon">
+            <img src="./images/notification-bell.png" alt="a notification bell icon">
         </div>
     </nav>
 </body>
