Add sidebar recommended videos with title and number of views

--- a/index.html
+++ b/index.html
@@ -1,42 +1,87 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Embedding Images and Video</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <nav id="navbar">
-        <div class="navbar-img">
-            <a href="#"><img src="./images/YouTube_Logo.png" alt="YouTube logo image"></a>
-        </div>
-        <div class="navbar-search">
-            <input type="text" name="search" placeholder="What's in your mind!">
-            <button class="search-btn">Search</button>
-        </div>
-        <div class="avatar-images">
-            <a href="#"><img src="./images/video-add.png" alt="a Video add icon"></a>
-            <a href="#"><img src="./images/Apps.png" alt="an app panel icon"></a>
-            <a href="#"><img src="./images/notification-bell.png" alt="a notification bell icon"></a>
-        </div>
+      <div class="navbar-img">
+        <a href="#"
+          ><img src="./images/YouTube_Logo.png" alt="YouTube logo image"
+        /></a>
+      </div>
+      <div class="navbar-search">
+        <input type="text" name="search" placeholder="What's in your mind!" />
+        <button class="search-btn">Search</button>
+      </div>
+      <div class="avatar-images">
+        <a href="#"
+          ><img src="./images/video-add.png" alt="a Video add icon"
+        /></a>
+        <a href="#"><img src="./images/Apps.png" alt="an app panel icon" /></a>
+        <a href="#"
+          ><img
+            src="./images/notification-bell.png"
+            alt="a notification bell icon"
+        /></a>
+      </div>
     </nav>
     <section>
-        <div class="embed-video">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/lJIrF4YjHfQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        </div>
-        <div class="desc-video">
-            <h3>Embed videos and playlists</h3>
-            <p>218,047 views•May 13, 2016</p>
-        </div>
-        <div class="channel">
-            <img src="./images/youtube-little-icon.jpg" alt="youtube little icon">
-            <h5>TeamYouTube [Help]</h5>
-            <p>7.89M subscribers</p>
-            <button class="sub-btn">SUBSCRIBE</button>
-            <p>To learn more please visit the YouTube Help Center: https://www.youtube.com/help</p>
-            <button>SHOW MORE</button>
-        </div>
+      <div class="embed-video">
+        <iframe
+          width="560"
+          height="315"
+          src="https://www.youtube.com/embed/lJIrF4YjHfQ"
+          frameborder="0"
+          allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen
+        ></iframe>
+      </div>
+      <div class="desc-video">
+        <h3>Embed videos and playlists</h3>
+        <p>218,047 views•May 13, 2016</p>
+      </div>
+      <div class="channel">
+        <img src="./images/youtube-little-icon.jpg" alt="youtube little icon" />
+        <h5>TeamYouTube [Help]</h5>
+        <p>7.89M subscribers</p>
+        <button class="sub-btn">SUBSCRIBE</button>
+        <p>
+          To learn more please visit the YouTube Help Center:
+          https://www.youtube.com/help
+        </p>
+        <button>SHOW MORE</button>
+      </div>
     </section>
-</body>
+    <aside>
+      <div>
+        <img src="./images/video1.png" alt="Music Vidoe 1" />
+        <h5>Music Vidoe 1</h5>
+        <p>300 views</p>
+      </div>
+      <div>
+        <img src="./images/video2.jfif" alt="Music Vidoe 2" />
+        <h5>Music Vidoe 2</h5>
+        <p>450 views</p>
+      </div>
+      <div>
+        <img src="./images/vidoe3.png" alt="Music Vidoe 3" />
+        <h5>Music Vidoe 3</h5>
+        <p>120 views</p>
+      </div>
+      <div>
+        <img src="./images/video4.jfif" alt="Music Vidoe 4" />
+        <h5>Music Vidoe 4</h5>
+        <p>300 views</p>
+      </div>
+      <div>
+        <img src="./images/video5.jfif" alt="Music Vidoe 5" />
+        <h5>Music Vidoe 5</h5>
+        <p>410 views</p>
+      </div>
+    </aside>
+  </body>
 </html>
