Removing #navbar from the nav tag, changing it in css file

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <nav id="navbar">
+    <nav>
       <div class="navbar-img">
         <a href="#"
           ><img src="./images/YouTube_Logo.png" alt="YouTube logo image"
